--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Event-based Brownian Motion Simulation with Webpack</title>
   </head>
   <body>
+    <div>
+      <span>timestamp:</span>
+      <span id="timestamp"></span>
+    </div>
     <canvas id="canvas" width="400" height="320"></canvas>
     <script src="bundle.js"></script>
   </body>
